syntax = "proto3";

package misc;

import "google/api/expr/v1alpha1/eval.proto";
import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "misc/nest.proto";

message EvalRequest {
  // Bindings for the external variables.  The types SHOULD be compatible
  // with the type environment in [CheckRequest][google.api.expr.conformance.v1alpha1.CheckRequest], if checked.
  map<string, google.api.expr.v1alpha1.ExprValue> bindings = 1;

  map<string, google.api.expr.v1alpha1.IdRef> refs = 2;

  uint32 test_num = 3;
  string test_string = 4 [(gogoproto.nullable) = false];
  bool test_bool = 5;

  // Used in v1beta1
  reserved 6, 7, 9 to 11;

  AccessConfig instantiate_permission = 8;

  oneof test_oneof {
    // [(gogoproto.nullable) = false] wouldn't work in this case
    string id = 12 [(gogoproto.nullable) = false];
    string name = 13;
  }

  repeated string test_array = 14;

  FeatureSet.Utf8Validation opt = 15 [(gogoproto.jsontag) = "opt"];

  TestNest.Graph graph = 16;

  // deprecated option
  string deprecated = 17 [(gogoproto.moretags) = "yaml:\"deprecated\",deprecated:\"true\""];
  string false_deprecated = 18 [(gogoproto.moretags) = "yaml:\"deprecated\",deprecated:\"false\""];
}

message AccessConfig {
  string sender = 1;
}

// VoteOption enumerates the valid vote options for a given governance proposal.
enum VoteOption {
  // VOTE_OPTION_UNSPECIFIED defines a no-op vote option.
  VOTE_OPTION_UNSPECIFIED = 0;
  // VOTE_OPTION_YES defines a yes vote option.
  VOTE_OPTION_YES = 1;
  // VOTE_OPTION_ABSTAIN defines an abstain vote option.
  VOTE_OPTION_ABSTAIN = 2;
  // VOTE_OPTION_NO defines a no vote option.
  VOTE_OPTION_NO = 3;
  // VOTE_OPTION_NO_WITH_VETO defines a no with veto vote option.
  VOTE_OPTION_NO_WITH_VETO = 4;
}

message GenericAuthorization {
  option (cosmos_proto.implements_interface) = "Authorization";

  // Msg, identified by it's type URL, to grant unrestricted permissions to execute
  string msg = 1;
}
